samples/_failures_safe/1761488424_7be322_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bf0f507.c: In function ‘main’:
./samples/SAFE/__tmp_2bf0f507.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
